<resources>
    <string name="app_name">Auxil</string>

    <!-- Title for map activity. -->
    <string name="title_activity_food_bank_map">Food Bank Map</string>

    <!-- ______________________ Bottom Navigation ______________________ -->

    <!-- Title for map navigation item. -->
    <string name="nav_text_map">Home</string>

    <!-- Title for food bank information navigation item. -->
    <string name="nav_text_info">Info</string>

    <!-- Title for food bank donation navigation item. -->
    <string name="nav_text_donate">Donate</string>

    <!-- Title for FAQ navigation item. -->
    <string name="nav_text_faq">Donate</string>

    <!-- Title for food bank donation navigation item. -->
    <string name="nav_text_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- ______________________ Bottom Navigation ______________________ -->

    <!-- ______________________ Info Window ______________________ -->

    <!-- Text description for prompting user to click the window. -->
    <string name="info_window_click_prompt_text">Click this window for more info.</string>

    <!-- Text description for website contact. -->
    <string name="info_fragment_website_text">Website</string>

    <!-- Text description for phone contact. -->
    <string name="info_fragment_phone_text">Phone</string>

    <!-- Content description for the close button. -->
    <string name="info_fragment_close_content_description">Close the food bank information page.</string>

    <!-- ______________________ Info Window ______________________ -->

    <!-- ______________________ FAQ ______________________ -->

    <!-- Question regarding why app was made. -->
    <string name="faq_question_about_text">What is the purpose of Auxil? Why did you make this?</string>

    <!-- Answer regarding why app was made. -->
    <string name="faq_answer_about_text">Auxil is based off of the fact that I needed a way to find a lot of food banks to be involved with, not only the ones that are close to me. From there, the app just became a way to help people and facilities across the country.</string>

    <!-- Question regarding where the funds are heading. -->
    <string name="faq_question_money_text">Where is my money going? Is this safe?</string>

    <!-- Answer regarding where the funds are heading. -->
    <string name="faq_answer_money_text">I can guarantee you that 100% of the funds you send through Auxil go to the rightful food banks. I will be posting receipts further on and honestly, it would be sad if I scammed people on an app like this, so no, I am not doing that.</string>

    <!-- ______________________ FAQ ______________________ -->

    <!-- ______________________ Settings ______________________ -->

    <!-- Example General settings. -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync. -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications. -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- ______________________ Settings ______________________ -->
</resources>
