<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".faq.FAQFragment">

    <TextView
        android:id="@+id/faq_question_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/cabin_condensed_bold"
        android:text="@string/faq_question_about_text" />

    <TextView
        android:id="@+id/faq_answer_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/faq_answer_about_text" />

    <TextView
        android:id="@+id/faq_question_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/cabin_condensed_bold"
        android:text="@string/faq_question_money_text" />

    <TextView
        android:id="@+id/faq_answer_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/faq_answer_money_text" />

</LinearLayout>